--- a/source/layout.erb
+++ b/source/layout.erb
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%= stylesheet_link_tag "all" %>
 
     <title>Blog Title<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
@@ -14,7 +15,7 @@
       <%= yield %>
     </div>
 
-    <aside>
+    <aside class="footer">
       <h2>Recent Articles</h2>
       <ol>
         <% blog.articles[0...10].each do |article| %>
